<resources>
    <string name="app_name">ThinkPower</string>
    <string name="action_toggle_fw">Toggle floating widget</string>
    <string name="ins_chartcc">Current-Instant</string>
    <string name="miniAn">mA</string>
    <string name="miniVol">mV</string>
    <string name="avg_chartcc">Current-Average</string>
    <string name="ins_voltage">Voltage</string>
    <string name="ins_temp">Temperature</string>
    <string name="C">C</string>
</resources>
